--- a/styles.css
+++ b/styles.css
@@ -146,8 +146,9 @@ nav {
 
 /* Tab Mobile Menu - Menu(8)*/
 .mobile-menu {
+    background-color: var(--black);
     position: absolute;
-    top: 60px;
+    top: 64px;
     padding: 24px;
 }
 .mobile-menu a { 
@@ -179,6 +180,97 @@ nav {
     color: var(--orange-primary-color);
 }
 
+/* Aside (Product detail) - Shopping Cart(13) */
+.product-detail {
+    background-color: var(--black);
+    width: 360px;
+    padding: 0 24px;
+    position: absolute;
+    right: 0; 
+}
+.title-container {
+    display: flex;
+    margin-bottom: 40px;
+}
+.title-container img {
+    transform: rotate(180deg); 
+    margin-right: 14px;
+}
+.title {
+    font-size: var(--lg);
+    font-weight: bold;
+    color: var(--white); 
+}
+.my-order-content {
+    display: flex;
+    flex-direction: column; 
+}
+.shopping-cart {
+    display: grid;
+    grid-template-columns: auto 1fr auto auto;
+    gap: 16px;
+    margin-bottom: 24px;
+    align-items: center; 
+}
+.shopping-cart figure {
+    margin: 0; 
+}
+.shopping-cart figure img {
+    width: 70px; 
+    height: 70px; 
+    border-radius: 20px; 
+    object-fit: cover; 
+}
+.shopping-cart p:nth-child(2) {
+    color: var(--text-input-field);
+    font-size: 1.2rem;
+}
+.shopping-cart p:nth-child(3) {
+    color: var(--white);
+    font-size: var(--md);
+    font-weight: bold; 
+}
+.order {
+    width: 100%;
+    height: 50px;
+    display: grid; 
+    grid-template-columns: auto 1fr;
+    gap: 16px; 
+    align-items: center;
+    background-color: var(--gold-secondary-color);
+    margin-bottom: 24px;
+    border-radius: 8px; 
+    padding: 0 24px;
+    cursor: pointer;
+}
+.order p:nth-child(1) {
+    display: flex;
+    flex-direction: column;
+}
+.order p span:nth-child(1) {
+    font-size: var(--md);
+    font-weight: bold; 
+    color: var(--white);
+}
+.order p:nth-child(2) {
+    text-align: end; 
+    font-size: var(--md);
+    font-weight: bold; 
+    color: var(--white);
+}
+.primary-button {
+    width: 100%;
+    height: 50px;
+    font-size: var(--md);
+    font-family: 'Quicksand', sans-serif;
+    font-weight: bold;
+    border-radius: 8px; 
+    border: none;
+    background-color: var(--orange-primary-color);
+    color: var(--white);
+    cursor: pointer;
+}
+
 
 @media (max-width: 640px) {
     .menu {
@@ -194,6 +286,9 @@ nav {
     }
     .desktop-menu {
         display: none;
+    }
+    .product-detail {
+        width: 100%;
     }
 }
 
