--- a/styles.css
+++ b/styles.css
@@ -149,7 +149,9 @@ nav {
     background-color: var(--black);
     position: absolute;
     top: 64px;
-    padding: 24px;
+    left: 0;
+    width: calc(100% - 24px);
+    padding-left: 24px;
 }
 .mobile-menu a {
     text-decoration: none;
@@ -177,13 +179,18 @@ nav {
     color: var(--orange-primary-color);
 }
 
-/* Aside (Product detail) - Shopping Cart(13) */
-.product-detail {
+/* Aside */
+aside {
     background-color: var(--black);
     width: 360px;
-    padding: 0 24px;
+    box-sizing: border-box;
     position: absolute;
     right: 0;
+} 
+
+/* ShoppingCart - Shopping Cart(13) */
+#shoppingCartContainer {
+    padding: 0 24px;
 }
 .title-container {
     display: flex;
@@ -268,6 +275,87 @@ nav {
     cursor: pointer;
 }
 
+/* ProductDetail - ProductDetail (12) */
+.product-detail-close {
+    position: absolute;
+    top: 24px;
+    left: 24px; 
+    background: var(--white);
+    width: 14px;
+    height: 14px; 
+    z-index: 2;
+    padding: 12px;
+    border-radius: 50%;
+}
+.product-detail-close:hover {
+    cursor: pointer; 
+}
+#productDetail > img:nth-child(2) {
+    width: 100%;
+    height: 360px; 
+    object-fit: cover; 
+    border-radius: 0 0 20px 20px;
+}
+.dots {
+    text-align: center; 
+}
+.dot {
+    cursor: pointer; 
+    height: 8px;
+    width: 8px; 
+    margin: 0 2px; 
+    background-color: var(--text-input-field);
+    border-radius: 50%;
+    display: inline-block; 
+}
+.dots span:nth-child(1){
+    background-color: var(--orange-primary-color);
+}
+#productDetail .product-info {
+    margin: 24px 24px 0 24px;
+}
+#productDetail .product-info p:nth-child(1) {
+    color: var(--white); 
+    font-weight: bold;
+    font-size: var(--md);
+    margin-top: 0;
+    margin-bottom: 4px;
+}
+#productDetail .product-info p:nth-child(2) {
+    color: var(--text-input-field); 
+    font-size: var(--md);
+    margin-top: 0;
+    margin-bottom: 36px;
+}
+#productDetail .product-info p:nth-child(3) {
+    color: var(--text-input-field); 
+    font-size: var(--sm);
+    margin-top: 0;
+    margin-bottom: 36px;
+}
+.primary-button {
+    width: 100%;
+    height: 50px;
+    font-size: var(--md);
+    font-family: 'Quicksand', sans-serif;
+    font-weight: bold;
+    border-radius: 8px; 
+    border: none;
+    background-color: var(--orange-primary-color);
+    color: var(--white);
+    cursor: pointer;
+}
+.primary-button img {
+    width: 35px;
+    height: 35px;
+    margin-right: 10px;
+}
+.add-to-cart-button {
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+}
+
 /* Product List - Home (6) */
 
 .cards-container {
@@ -287,27 +375,27 @@ nav {
     border-radius: 20px;
     object-fit: cover;
 }
-.product-info {
+.product-card .product-info {
     display: flex;
     margin-top: 12px;
     justify-content: space-between;
     align-items: center;
 }
-.product-info figure{
+.product-card .product-info figure{
     margin: 0;
 }
-.product-info figure img {
+.product-card .product-info figure img {
     width: 35px;
     height: 35px;
 }
-.product-info div p:nth-child(1) {
+.product-card .product-info div p:nth-child(1) {
     margin-top: 0px;
     margin-bottom: 4px;
     font-weight: bold;
     font-size: var(--md);
     color: var(--text-input-field);
 }
-.product-info div p:nth-child(2) {
+.product-card .product-info div p:nth-child(2) {
     margin-top: 0;
     margin-bottom: 0;
     font-size: var(--sm);
@@ -330,7 +418,7 @@ nav {
     .desktop-menu {
         display: none;
     }
-    .product-detail {
+    .aside {
         width: 100%;
     }
     .cards-container {
